k8s/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: spring-auf-kubernetes
spec:
  selector:
    app: spring-auf-kubernetes
  ports:
    - protocol: TCP
      port: 8080
      name: http
  # Type `NodePort` wird nur für minikube verwendet. In einem richtigen Cluster sollte ClusterIp verwendet werden.      
  #    targetPort: 8080
  # type: NodePort
