k8s/ingress-staging.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: "letsencrypt-prod"
    certmanager.k8s.io/acme-challenge-type: http01
  labels:
    app: spring-auf-kubernetes
  name: spring-auf-kubernetes
spec:
  rules:
  - host: spring-auf-kubernetes.staging.br0tbox.de
    http:
      paths:
      - backend:
          serviceName: spring-auf-kubernetes
          servicePort: 8080
        path: /
  tls:
  - hosts:
    - spring-auf-kubernetes.staging.br0tbox.de
    secretName: spring-auf-kubernetes-staging-tls
